Fixed hero background overflow issue

--- a/Novara-capstone-project/src/App.css
+++ b/Novara-capstone-project/src/App.css
@@ -12,15 +12,12 @@ html {
   scroll-behavior: smooth;
 }
 
-/* BODY + ROOT */
+/* BODY */
 
-body,
-#root {
+body {
   font-family: Arial, sans-serif;
 
-  background-color: #041b5f;
-
-  width: 100%;
+  background-color: white;
 
   overflow-x: hidden;
 }
